<resources>
    <string name="app_name">Supermarket Saver</string>
    <string name="no_network">No network Connection</string>
    <string name="no_data">No Data Found</string>
    <string name="try_again">Try again</string>
    <string name="load_error">Error loading data</string>
    <string name="search_hint">Search...</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="nav_header_title">Supermarket Saver</string>
    <string name="nav_header_subtitle">SupermarketSaver@gmail.com</string>
    <string name="action_settings">Settings</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- Allows user to log out of their account -->
    <string name="logOut">Log Out</string>
    <string name="welcome_message">Welcome To Supermarket Saver</string>

    <!-- Sign in & sign up buttons, EditTexts etc -->
    <string name="hint_email">Enter your Email</string>
    <string name="hint_password">Enter your Password</string>
    <string name="login_error_message">Wrong email or password try again</string>
    <string name="hint_confirm_password">Confirm your password</string>
    <string name="password_dont_match">Passwords do not match</string>
    <string name="or">OR</string>
    <string name="google_sign_in">Google Sign In</string>
    <string name="signup">SignUp</string>
    <string name="login_button">Login</string>

    <!-- Button that enables users to search for supermarkets near them -->
    <string name="supermarkets_near_me">Supermarkets Near Me</string>
    <!-- Displayed in saved products class if user hasn't saved any items -->
    <string name="no_items_saved">No item saved</string>

    <!-- Drawer Layout Menu options -->
    <string name="menu_login">Login</string>
    <string name="menu_saved">My Shopping List</string>
    <string name="menu_about">About</string>
    <string name="menu_share">Share App</string>
    <string name="menu_fruit">Fruit</string>
    <string name="menu_alcohol">Alcohol</string>
    <string name="menu_baby">Baby</string>
    <string name="menu_gluten_free">Gluten Free</string>
    <string name="menu_vegan">Vegan</string>
    <string name="menu_special_offers">Special Offers</string>

    <!-- Maps to show nearest supermarkets -->
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_google_maps">Map</string>
    <string name="supermarkets_near_me_btn">Supermarkets</string>
    <string name="search_for_a_location">Search a location</string>
    <string name="location_not_found">Location not found...</string>
    <string name="searching_nearby_supermarkets">Searching for Nearby Supermarkets...</string>
    <string name="showing_nearby_supermarkets">Displaying Nearby Supermarkets</string>

    <!-- Toast messages for login page-->
    <string name="must_enter_email_password">Please Fill both Email and Password Fields</string>
    <string name="authentication_failed">Authentication failed</string>
    <string name="login_successful">Login Successful</string>
    <string name="login_fail">Sign in failed</string>
    <!-- Toast messages for MainActivity.java-->
    <string name="log_out">Logged Out</string>
    <string name="click_to_login">Click top left to login</string>
    <string name="about_app">About App</string>
    <string name="searching_special_offers">Special Offers</string>
    <string name="searching_alcohol">Searching for Alcohol...</string>
    <string name="searching_fruit">Searching for Fruit...</string>
    <string name="searching_baby">Searching for Baby products...</string>
    <string name="searching_gluten">Searching for Gluten free products...</string>
    <string name="searching_vegan">Searching for Vegan products...</string>
    <string name="sharing_app_message">I found this cool Supermarket price comparison app on the Play store check it out!</string>
    <!-- Toast messages for main ProductList.java-->
    <string name="searching_product">Sharing one sec</string>
    <string name="item_found">I found this item on the SupermarketSaver App, check it out.</string>
    <string name="product_saved">Saved to shopping list </string>
    <string name="item_removed">Item removed from shopping list</string>
    <string name="loginOrSignup_toSave">Need to Login/Sign up to save products </string>

    <string-array name="sort">
        <item>Price (Low to High)</item>
        <item>Price (High to Low)</item>
    </string-array>

    <!-- Toast messages for main SavedProducts.java-->
    <string name="login_for_saved_items">Login to view Saved Products</string>
    <string name="item_deleted">Item Deleted</string>
    <string name="saved_products_title">My Shopping List</string>
    <!-- Toast messages for main Search.java-->
    <string name="search_not_empty">Search cannot be empty</string>
    <string name="voice_search_error">Something went wrong with starting the voice search try again</string>
    <!-- Toast messages for main SignUp.java-->
    <string name="account_created">Account created successfully</string>
</resources>
