<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_login"
            android:title="@string/menu_login"
            android:icon="@drawable/ic_login" />
        <item
            android:id="@+id/nav_saved"
            android:icon="@drawable/ic_saved_grey"
            android:title="@string/menu_saved" />

        <item
            android:id="@+id/nav_info"
            android:icon="@drawable/ic_info"
            android:title="@string/menu_about" />
    </group>

    <item android:title="Special Offers">
        <menu>
            <item
                android:id="@+id/nav_special_offers"
                android:icon="@drawable/ic_local_offer_black_24dp"
                android:title="@string/menu_special_offers" />
        </menu>
    </item>

    <item android:title="Popular Categories">
        <menu>
            <item
                android:id="@+id/nav_alcohol"
                android:icon="@drawable/ic_alcohol"
                android:title="@string/menu_alcohol" />

            <item
                android:id="@+id/nav_baby"
                android:icon="@drawable/ic_baby"
                android:title="@string/menu_baby" />

            <item
                android:id="@+id/nav_fruit"
                android:icon="@drawable/ic_fruit"
                android:title="@string/menu_fruit" />

            <item
                android:id="@+id/nav_gluten_free"
                android:icon="@drawable/ic_gluten_free"
                android:title="@string/menu_gluten_free" />

            <item
                android:id="@+id/nav_vegan"
                android:icon="@drawable/ic_vegan"
                android:title="@string/menu_vegan" />
        </menu>
    </item>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />
        </menu>
    </item>
</menu>
